@@ -2,6 +2,7 @@
     - added filter effect
     - added disabling SVG tab if no SVG file loaded on file tree view and the view is not empty
     - added Version class
+    - added effects storage in XML files
     - CMake: build using choosed Qt version (4/5)
     - code update for Qt 5 compatibility
     - bugfix: painting effect when desired size typed in Bytes now
